<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7D7CC"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/login_header_background">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_editext"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_pi1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/welcome_registration_text1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_pi1" />

                    <EditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_first_name" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextText4"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="@string/gender_list"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_last_name">

                        <AutoCompleteTextView
                            android:id="@+id/genders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none">

                        </AutoCompleteTextView>
                    </com.google.android.material.textfield.TextInputLayout>

                    <EditText
                        android:id="@+id/edt_dob"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/dob_title"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_dob" />

                    <EditText
                        android:id="@+id/edt_postal_code"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/postal_code"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_address" />

                    <EditText
                        android:id="@+id/edt_city"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/city"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_postal_code" />

                    <EditText
                        android:id="@+id/edt_country"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/country"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_city" />

                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_country" />

                    <ImageView
                        android:id="@+id/img_dob"
                        android:layout_width="46dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/calendar"
                        app:layout_constraintStart_toEndOf="@+id/edt_dob"
                        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

                    <Button
                        android:id="@+id/btn_pi_cancel"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/cancel"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

                    <Button
                        android:id="@+id/btn_pi_next"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/next"
                        android:textSize="16dp"
                        app:layout_constraintStart_toEndOf="@+id/btn_pi_cancel"
                        app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>